--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,11 @@
+<div *ngFor="let rest of rests">
 
-<div style="text-align:center">
-<mat-card class="example-card">
-  <mat-card-title> {{title}} </mat-card-title>
-  <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
-  <mat-card-content>
-    <p>
-      {{content}}
-
-    </p>
-
-  </mat-card-content>
-</mat-card>
+  <app-rest-card [restaurant]="rest"></app-rest-card>
 </div>
+
+
+
+
 
 
 <router-outlet></router-outlet>
