--- a/src/app/views/rest-card/rest-card.component.html
+++ b/src/app/views/rest-card/rest-card.component.html
@@ -1,3 +1,27 @@
-<p>
-  rest-card works!
-</p>
+
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{restaurant.name | uppercase}}</mat-card-title>
+<mat-card-subtitle>
+      Tel: <a href="tel:{{restaurant.phone}}"> {{restaurant.phone}}</a>
+
+      <span *ngIf="restaurant.website">Web: <a href="{{restaurant.website}}" target="_blank">{{restaurant.name | lowercase}}</a></span>
+
+      <br>
+
+
+      Now: {{now | date}}
+
+    </mat-card-subtitle>
+
+
+  </mat-card-header>
+
+  <mat-card-content>
+    <p>
+      Rating: {{restaurant.rating}}<br>
+      Price:  {{restaurant.priceRange}}
+
+    </p>
+  </mat-card-content>
+</mat-card>
