--- a/src/app/views/rest-card/rest-card.component.html
+++ b/src/app/views/rest-card/rest-card.component.html
@@ -9,6 +9,16 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>Rated: {{restaurant.rating}}</p>
+    <p *ngIf="restaurant.rating">Rating: {{restaurant.rating}}</p>
+    <p *ngIf="restaurant.location.streetNumber">Street Number: {{restaurant.location.streetNumber}}</p>
+    <p *ngIf="restaurant.location.streetName">Street Name: {{restaurant.location.streetName}}</p>
+    <p *ngIf="restaurant.location.city">City: {{restaurant.location.city}}</p>
+    <p *ngIf="restaurant.location.province">Province: {{restaurant.location.province}}</p>
   </mat-card-content>
 </mat-card>
+
+
+
+
+
+
