--- a/src/app/views/restaurants/restaurants.component.html
+++ b/src/app/views/restaurants/restaurants.component.html
@@ -1,3 +1,32 @@
+<style>
+  table, th, td {
+    border: 1px solid black;
+  }
+</style>
+
+
 <div *ngFor="let rest of rests">
   <app-rest-card [restaurant]="rest"></app-rest-card>
 </div>
+
+
+
+
+
+
+
+<!--R&D-->
+<h1>R&D: loop through object array and output elements </h1>
+{{title}}
+<table>
+  <thead>
+  <th>Name</th>
+  <th>Index</th>
+  </thead>
+  <tbody>
+  <tr *ngFor="let hero of heroes">
+    <td>{{hero.name}}</td>
+    <td>{{hero.id}}</td>
+  </tr>
+  </tbody>
+</table>
